# restcodegen

./: README.md  pyproject.toml
.github/workflows/: python-test.yml
clients/http/example/: __init__.py
clients/http/example/apis/: account_api.py  login_api.py
clients/http/example/models/: api_models.py
interceptors/: allure.py  base.py  client.py  logger.py  logging.py  protocol.py
restcodegen/cli/: main.py
restcodegen/generator/: base.py  codegen.py  log.py  logic_codegen.py  naming.py  parameters.py  parser.py  patcher.py  rest_codegen.py  spec_loader.py  spec_patcher.py  utils.py
restcodegen/generator/parser/: __init__.py  parser.py  types.py
restcodegen/generator/spec/: __init__.py  fetcher.py  loader.py  normalizer.py
restcodegen/generator/spec/patchers/: __init__.py  component_schema_patcher.py  inline_schema_extractor.py
restcodegen/rest_client/: client_async.py  client_sync.py
restcodegen/restclient/: client.py  configuration.py
restcodegen/templates/: api_client.jinja2  api_helper.jinja2  apis_init.jinja2  header.jinja2  service_facade.jinja2  service_helper.jinja2
tests/: conftest.py  minimal_swagger.json  test_client.py  test_codegen.py  test_naming_utils.py  test_parser.py  test_spec_loader.py  test_spec_patcher.py
