[tool.poetry]
name = "restcodegen"
version = "1.1.0"
description = ""
authors = ["Menshikov Valeriy Sergeevich <vmenshikov@ozon.ru>"]
readme = "README.md"
packages = [{ include = "restcodegen" }, { include = "interceptors" }]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.3"
pydantic-settings = "^2.7.1"
httpx = "^0.28.1"
ruff = "^0.9.2"
mypy = "^1.14.1"
jinja2 = "^3.1.5"
datamodel-code-generator = "^0.26.5"
click = "^8.1.8"
curlify2 = { version="^2.0.0", optional = true }
structlog = { version="^23.1.0",  optional = true }
allure-pytest = { version="^2.13.5",  optional = true }

[tool.poetry.extras]
qa = ["curlify2", "structlog", "allure-pytest"]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
restcodegen = "restcodegen.cli.main:cli"
