[tool.poetry]
name = "restcodegen"
version = "2.0.0"
description = ""
authors = ["Menshikov Valeriy Sergeevich <valeriy.menshikov.1989@gmail.com>"]
readme = "README.md"
packages = [{ include = "restcodegen" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
httpx = ">=0.28.1,<1.0.0"
ruff = ">=0.9.2,<1.0.0"
jinja2 = ">=3.1.5,<4.0.0"
datamodel-code-generator = ">=0.35.0,<1.0.0"
click = ">=8.1.8,<10.0.0"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.14.1,<2.0.0"
pytest = ">=8.3.5,<10.0.0"
pytest-cov = ">=6.2.1,<8.0.0"
coverage-lcov = ">=0.2.2,<1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
restcodegen = "restcodegen.cli.main:cli"

[tool.pytest.ini_options]
addopts = """
  -s
  -vv
  --cov restcodegen
  --cov-report term
  --cov-report html
  --cov-report xml:coverage.xml
  --cov-report term-missing
  --cov-report xml:coverage.xml
  --disable-pytest-warnings
  --durations=10
  --junitxml=junit.xml
  -x
"""
#  --cov-fail-under=80

[tool.ruff]
line-length = 120
target-version = "py310"


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
